# InsightLense---Research_Document

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
static/: index.html
